<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_removeAds"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_removeAds"/>

        <item 
        android:id="@+id/action_save"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/save"
        android:icon="@drawable/holo_dark_content_save"
         />
        <item 
        android:id="@+id/action_selectcolor"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/color"
        android:icon="@drawable/colorpicker"
        
         />
        <item 
        android:id="@+id/action_erase"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/erase"
        android:icon="@drawable/eraser"
        
         />
    
        <item 
        android:id="@+id/action_share"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/share"
        android:icon="@drawable/holo_dark_ic_menu_share" />
        <item 
        android:id="@+id/action_brush"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="Brush"
        android:icon="@drawable/holo_darkcontent_edit" />
        <item 
        android:id="@+id/action_new"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/start_new"
        android:icon="@drawable/holo_dark_ic_menu_new"
         />

</menu>
